--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TESS"
         tools:targetApi="31">
         <activity
+            android:name=".DetailsJualan"
+            android:exported="false" />
+        <activity
+            android:name=".ProfilepageActicity"
+            android:exported="false" />
+        <activity
             android:name=".RecycleViewGridActivity"
             android:exported="false" />
         <activity
