--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -18,9 +18,7 @@
         <activity
             android:name=".ProfilepageActicity"
             android:exported="false" />
-        <activity
-            android:name=".RecycleViewGridActivity"
-            android:exported="false" />
+
         <activity
             android:name=".RecycviewActivity"
             android:exported="false" />
